feat: add all repositories for user management
- add Bcrypt encoder for password
- fix soft deleted records being retrieved
- add common jdbc helpers
- change DB user password length to fit encoded password length